Fix the navigation

--- a/index.html
+++ b/index.html
@@ -18,12 +18,10 @@
         <a href="index.html"><h1 class="gutter text-center nina bold">chatterbot</h1></a>
       </div>
       <div class="unit xs-1 s-1 m-3-4 l-3-4">
-        <input type="checkbox" class="nav-check" id="nav-check">
-        <label for="nav-check">Navigate</label>
         <nav role="navigation" class="gutter text-right">
           <ul class="nav">
             <li><a href="#">Products</a></li>
-            <li><a href="#">Pricing</a></li>
+            <li><a href="pricing.html">Pricing</a></li>
             <li><a href="tour.html">Features</a></li>
             <li><a href="#">Help</a></li>
             <li><a href="sign-up.html">Sign In</a></li>
