--- a/tour.html
+++ b/tour.html
@@ -21,7 +21,7 @@
         <nav class="gutter text-right">
           <ul class="nav">
             <li><a href="#">Products</a></li>
-            <li><a href="#">Pricing</a></li>
+            <li><a href="pricing.html">Pricing</a></li>
             <li><a class="current" href="tour.html">Features</a></li>
             <li><a href="#">Help</a></li>
             <li><a href="sign-up.html">Sign In</a></li>
