--- a/pricing.html
+++ b/pricing.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Sign-Up - Chatterbot</title>
+  <title>Pricing-Chatterbot</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
@@ -21,10 +21,10 @@
         <nav class="gutter text-right">
           <ul class="nav">
             <li><a href="#">Products</a></li>
-            <li><a href="pricing.html">Pricing</a></li>
+            <li><a class="current" href="pricing.html">Pricing</a></li>
             <li><a href="tour.html">Features</a></li>
             <li><a href="#">Help</a></li>
-            <li><a class="current" href="sign-up.html">Sign In</a></li>
+            <li><a href="sign-up.html">Sign In</a></li>
           </ul>
         </nav>
       </div>
