--- a/tour.html
+++ b/tour.html
@@ -15,7 +15,7 @@
   <header role="banner" class="pad-t-1-2">
     <div class="grid grid-middle">
       <div class="unit xs-1 s-1 m-1-4 l-1-4">
-        <a href="index.html"><h1 class="gutter">chatterbot</h1></a>
+        <a href="index.html"><h1 class="gutter text-center nina bold">chatterbot</h1></a>
       </div>
       <div class="unit xs-1 s-1 m-3-4 l-3-4">
         <nav class="gutter text-right">
@@ -30,3 +30,30 @@
       </div>
     </div>
   </header>
+
+  <main>
+    <section class="island">
+      <h2 class="text-center pad-t gutter-2">Choose from one of our existing templates to create your own chatbot.</h2>
+      <div class="grid">
+        <div class="unit xs-1 s-1 m-1-2 l-1-2 island">
+          <img class="img-flex pad-b" src="images/placeholder-2by3.svg" alt="">
+          <p class="text-center bold tera push-0">Classic</p>
+        </div>
+        <div class="unit xs-1 s-1 m-1-2 l-1-2 island">
+          <img class="img-flex pad-b" src="images/placeholder-2by3.svg" alt="">
+          <p class="text-center bold tera push-0">Modern</p>
+        </div>
+      </div>
+    </section>
+    <section class="island">
+      <div class="grid grid-middle">
+        <div class="unit xs-1 s-1 m-1-2 l-1-2 island">
+          <img class="img-flex" src="images/placeholder-1by1.svg" alt="">
+        </div>
+        <div class="unit xs-1 s-1 m-1-2 l-1-2">
+          <h2 class="text-upper not-bold exa text-center">Customization</h2>
+          <p class="text-center">We offer free customization services to meet your needs.</p>
+        </div>
+      </div>
+    </section>
+  </main>
