--- a/sign-up.html
+++ b/sign-up.html
@@ -15,7 +15,7 @@
   <header role="banner" class="pad-t-1-2">
     <div class="grid grid-middle">
       <div class="unit xs-1 s-1 m-1-4 l-1-4">
-        <a href="index.html"><h1 class="gutter">chatterbot</h1></a>
+        <a href="index.html"><h1 class="gutter text-center nina bold">chatterbot</h1></a>
       </div>
       <div class="unit xs-1 s-1 m-3-4 l-3-4">
         <nav class="gutter text-right">
