Create a new page

--- a/sign-in.html
+++ b/sign-in.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Pricing-Chatterbot</title>
+  <title>Sign-In-Chatterbot</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
@@ -21,12 +21,27 @@
         <nav class="gutter text-right">
           <ul class="nav">
             <li><a href="#">Products</a></li>
-            <li><a class="current" href="pricing.html">Pricing</a></li>
+            <li><a href="pricing.html">Pricing</a></li>
             <li><a href="tour.html">Features</a></li>
             <li><a href="#">Help</a></li>
-            <li><a href="sign-in.html">Sign In</a></li>
+            <li><a class="current" href="sign-in.html">Sign In</a></li>
           </ul>
         </nav>
       </div>
     </div>
   </header>
+
+  <main>
+    <section class="island">
+      <h2 class="text-upper text-center pad-t">Sign in to your account</h2>
+      <form class="" action="index.html" method="post">
+        <input class="push" type="email" name="email" id="email">
+        <label for="email"></label>
+        <input class="push" type="email" name="google" id="google">
+        <label for="google"></label>
+        <input class="push" type="email" name="google" id="google">
+        <label for="google"></label>
+      </form>
+      <p class="milli text-center">Don't have an account? <a href="sign-up.html">Sign Up!</a></p>
+    </section>
+  </main>
