--- a/tour.html
+++ b/tour.html
@@ -24,7 +24,7 @@
             <li><a href="pricing.html">Pricing</a></li>
             <li><a class="current" href="tour.html">Features</a></li>
             <li><a href="#">Help</a></li>
-            <li><a href="sign-up.html">Sign In</a></li>
+            <li><a href="sign-in.html">Sign In</a></li>
           </ul>
         </nav>
       </div>
