Add the footers

--- a/pricing.html
+++ b/pricing.html
@@ -30,3 +30,59 @@
       </div>
     </div>
   </header>
+
+  <footer role="contentinfo" class="island">
+    <div class="grid">
+      <div class="unit xs-1 s-1 m-1-5 l-1-5 milli">
+        <ul>
+          <li class="bold"><a href="#">Products</a></li>
+          <ul class="micro">
+            <li><a href="#">Why Chatterbot?</a></li>
+            <li><a href="#">Analytics</a></li>
+          </ul>
+        </ul>
+      </div>
+      <div class="unit xs-1 s-1 m-1-5 l-1-5 milli">
+        <ul>
+          <li class="bold"><a href="#">Pricing</a></li>
+          <ul class="micro">
+            <li><a href="#">Packages</a></li>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">FAQ</a></li>
+          </ul>
+        </ul>
+      </div>
+      <div class="unit xs-1 s-1 m-1-5 l-1-5 milli">
+        <ul>
+          <li class="bold"><a href="tour.html">Features</a></li>
+          <ul class="micro">
+            <li><a href="#">Templates</a></li>
+            <li><a href="#">Customization</a></li>
+          </ul>
+        </ul>
+      </div>
+      <div class="unit xs-1 s-1 m-1-5 l-1-5 milli">
+        <ul>
+          <li class="bold"><a href="#">Help</a></li>
+          <ul class="micro">
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Training</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Live Chat</a></li>
+          </ul>
+        </ul>
+      </div>
+      <div class="unit xs-1 s-1 m-1-5 l-1-5 milli">
+        <ul>
+          <li class="bold"><a href="#">Legal</a></li>
+          <ul class="micro">
+            <li><a href="#">Terms and Conditions</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+          </ul>
+        </ul>
+      </div>
+    </div>
+    <div  class="text-center">
+      <small>Copyright ©2020 Chatterbot</small>
+    </div>
+  </footer>
