--- a/sign-in.html
+++ b/sign-in.html
@@ -32,8 +32,8 @@
   </header>
 
   <main>
-    <section class="island">
-      <h2 class="text-upper text-center pad-t">Sign in to your account</h2>
+    <section class="island pad-b-2">
+      <h2 class="text-upper text-center pad-t-2">Sign in to your account</h2>
       <form class="" action="index.html" method="post">
         <input class="push" type="email" name="email" id="email">
         <label for="email"></label>
@@ -45,3 +45,59 @@
       <p class="milli text-center">Don't have an account? <a href="sign-up.html">Sign Up!</a></p>
     </section>
   </main>
+
+  <footer role="contentinfo" class="island">
+    <div class="grid">
+      <div class="unit xs-1 s-1 m-1-5 l-1-5 milli">
+        <ul>
+          <li class="bold"><a href="#">Products</a></li>
+          <ul class="micro">
+            <li><a href="#">Why Chatterbot?</a></li>
+            <li><a href="#">Analytics</a></li>
+          </ul>
+        </ul>
+      </div>
+      <div class="unit xs-1 s-1 m-1-5 l-1-5 milli">
+        <ul>
+          <li class="bold"><a href="#">Pricing</a></li>
+          <ul class="micro">
+            <li><a href="#">Packages</a></li>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">FAQ</a></li>
+          </ul>
+        </ul>
+      </div>
+      <div class="unit xs-1 s-1 m-1-5 l-1-5 milli">
+        <ul>
+          <li class="bold"><a href="tour.html">Features</a></li>
+          <ul class="micro">
+            <li><a href="#">Templates</a></li>
+            <li><a href="#">Customization</a></li>
+          </ul>
+        </ul>
+      </div>
+      <div class="unit xs-1 s-1 m-1-5 l-1-5 milli">
+        <ul>
+          <li class="bold"><a href="#">Help</a></li>
+          <ul class="micro">
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Training</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Live Chat</a></li>
+          </ul>
+        </ul>
+      </div>
+      <div class="unit xs-1 s-1 m-1-5 l-1-5 milli">
+        <ul>
+          <li class="bold"><a href="#">Legal</a></li>
+          <ul class="micro">
+            <li><a href="#">Terms and Conditions</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+          </ul>
+        </ul>
+      </div>
+    </div>
+    <div  class="text-center">
+      <small>Copyright ©2020 Chatterbot</small>
+    </div>
+  </footer>
