--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       <div class="unit xs-1 s-1 m-3-4 l-3-4">
         <nav role="navigation" class="gutter text-right">
           <ul class="nav">
-            <li><a href="#">Products</a></li>
-            <li><a href="pricing.html">Pricing</a></li>
             <li><a href="tour.html">Features</a></li>
+            <li><a href="pricing.html">Pricing</a></li>
+            <li><a href="#">Products</a></li>
             <li><a href="#">Help</a></li>
-            <li><a href="sign-up.html">Sign In</a></li>
+            <li><a href="sign-in.html">Sign In</a></li>
           </ul>
         </nav>
       </div>
