--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
       <div class="unit xs-1 s-1 m-3-4 l-3-4">
         <nav role="navigation" class="gutter text-right">
-          <ul class="nav">
+          <ul class="nav list-group">
             <li><a href="tour.html">Features</a></li>
             <li><a href="pricing.html">Pricing</a></li>
             <li><a href="#">Products</a></li>
@@ -57,7 +57,7 @@
       <p class="text-center">Create your own chatbot hassle-free!</p>
       <form class="push text-center" action="index.html" method="post">
         <label for="email"></label>
-          <input type="email" name="" value="">
+        <input type="email" name="" value="">
       </form>
       <div class="text-center">
         <span><a class="btn" href="#">Sign Up</a></span>
@@ -79,54 +79,44 @@
 
   <footer role="contentinfo" class="island">
     <div class="grid">
-      <div class="unit xs-1 s-1 m-1-5 l-1-5 milli">
-        <ul>
-          <li class="bold"><a href="#">Products</a></li>
-          <ul class="micro">
-            <li><a href="#">Why Chatterbot?</a></li>
-            <li><a href="#">Analytics</a></li>
-          </ul>
+      <ul class="unit xs-1 s-1 m-1-5 l-1-5 milli list-group">
+        <li class="bold"><a href="tour.html">Features</a></li>
+        <ul class="micro list-group push-0">
+          <li><a href="#">Templates</a></li>
+          <li><a href="#">Customization</a></li>
         </ul>
-      </div>
-      <div class="unit xs-1 s-1 m-1-5 l-1-5 milli">
-        <ul>
-          <li class="bold"><a href="#">Pricing</a></li>
-          <ul class="micro">
-            <li><a href="#">Packages</a></li>
-            <li><a href="#">Features</a></li>
-            <li><a href="#">FAQ</a></li>
-          </ul>
+      </ul>
+      <ul class="unit xs-1 s-1 m-1-5 l-1-5 milli list-group">
+        <li class="bold"><a href="#">Pricing</a></li>
+        <ul class="micro list-group push-0">
+          <li><a href="#">Packages</a></li>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">FAQ</a></li>
         </ul>
-      </div>
-      <div class="unit xs-1 s-1 m-1-5 l-1-5 milli">
-        <ul>
-          <li class="bold"><a href="tour.html">Features</a></li>
-          <ul class="micro">
-            <li><a href="#">Templates</a></li>
-            <li><a href="#">Customization</a></li>
-          </ul>
+      </ul>
+      <ul class="unit xs-1 s-1 m-1-5 l-1-5 milli list-group">
+        <li class="bold"><a href="#">Products</a></li>
+        <ul class="micro list-group push-0">
+          <li><a href="#">Why Chatterbot?</a></li>
+          <li><a href="#">Analytics</a></li>
         </ul>
-      </div>
-      <div class="unit xs-1 s-1 m-1-5 l-1-5 milli">
-        <ul>
-          <li class="bold"><a href="#">Help</a></li>
-          <ul class="micro">
-            <li><a href="#">Support</a></li>
-            <li><a href="#">Training</a></li>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Live Chat</a></li>
-          </ul>
+      </ul>
+      <ul class="unit xs-1 s-1 m-1-5 l-1-5 milli list-group">
+        <li class="bold"><a href="#">Help</a></li>
+        <ul class="micro list-group push-0">
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Training</a></li>
+          <li><a href="#">Contact Us</a></li>
+          <li><a href="#">Live Chat</a></li>
         </ul>
-      </div>
-      <div class="unit xs-1 s-1 m-1-5 l-1-5 milli">
-        <ul>
-          <li class="bold"><a href="#">Legal</a></li>
-          <ul class="micro">
-            <li><a href="#">Terms and Conditions</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-          </ul>
+      </ul>
+      <ul class="unit xs-1 s-1 m-1-5 l-1-5 milli list-group">
+        <li class="bold"><a href="#">Legal</a></li>
+        <ul class="micro list-group push-0">
+          <li><a href="#">Terms and Conditions</a></li>
+          <li><a href="#">Privacy Policy</a></li>
         </ul>
-      </div>
+      </ul>
     </div>
     <div  class="text-center">
       <small>Copyright ©2020 Chatterbot</small>
