Add some images

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   </main>
 
   <footer role="contentinfo" class="island">
-    <div class="grid">
+    <div class="grid text-center">
       <ul class="unit xs-1 s-1 m-1-5 l-1-5 milli list-group">
         <li class="bold"><a href="tour.html">Features</a></li>
         <ul class="micro list-group push-0">
@@ -87,7 +87,7 @@
         </ul>
       </ul>
       <ul class="unit xs-1 s-1 m-1-5 l-1-5 milli list-group">
-        <li class="bold"><a href="#">Pricing</a></li>
+        <li class="bold"><a href="pricing.html">Pricing</a></li>
         <ul class="micro list-group push-0">
           <li><a href="#">Packages</a></li>
           <li><a href="#">Features</a></li>
@@ -118,8 +118,16 @@
         </ul>
       </ul>
     </div>
-    <div  class="text-center">
-      <small>Copyright ©2020 Chatterbot</small>
+    <div class="grid pad-t-1-2 push-2 gutter-2">
+      <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+        <img class="img-flex" src="images/facebook.svg" alt="">
+      </div>
+      <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+        <img class="img-flex" src="images/instagram.svg" alt="">
+      </div>
+    </div>
+    <div class="text-center">
+      <small class="micro">Copyright ©2020 Chatterbot</small>
     </div>
   </footer>
 
