--- a/sign-in.html
+++ b/sign-in.html
@@ -34,7 +34,7 @@
   <main>
     <section class="island pad-b-2">
       <h2 class="text-upper text-center pad-t-2">Sign in to your account</h2>
-      <form class="" action="index.html" method="post">
+      <form class="push" action="index.html" method="post">
         <input class="push" type="email" name="email" id="email">
         <label for="email"></label>
         <input class="push" type="email" name="google" id="google">
@@ -42,12 +42,12 @@
         <input class="push" type="email" name="google" id="google">
         <label for="google"></label>
       </form>
-      <p class="milli text-center">Don't have an account? <a href="sign-up.html">Sign Up!</a></p>
+      <p class="milli text-center">Don't have an account? <a href="sign-up.html">Sign up!</a></p>
     </section>
   </main>
 
   <footer role="contentinfo" class="island">
-    <div class="grid">
+    <div class="grid text-center">
       <ul class="unit xs-1 s-1 m-1-5 l-1-5 milli list-group">
         <li class="bold"><a href="tour.html">Features</a></li>
         <ul class="micro list-group push-0">
@@ -87,7 +87,7 @@
         </ul>
       </ul>
     </div>
-    <div  class="text-center">
-      <small>Copyright ©2020 Chatterbot</small>
+    <div class="text-center">
+      <small class="micro">Copyright ©2020 Chatterbot</small>
     </div>
   </footer>
