--- a/sign-up.html
+++ b/sign-up.html
@@ -19,7 +19,7 @@
       </div>
       <div class="unit xs-1 s-1 m-3-4 l-3-4">
         <nav class="gutter text-right">
-          <ul class="nav">
+          <ul class="nav list-group">
             <li><a href="tour.html">Features</a></li>
             <li><a href="pricing.html">Pricing</a></li>
             <li><a href="#">Products</a></li>
@@ -34,69 +34,59 @@
   <main>
     <section class="island pad-b-2">
       <h2 class="text-upper text-center pad-t-2">Create A New Account</h2>
-      <form class="" action="index.html" method="post">
+      <form class="push" action="index.html" method="POST">
+        <label class="micro" for="email">Enter your email</label>
         <input class="push" type="email" name="email" id="email">
-        <label for="email"></label>
+        <label class="micro" for="password">Create your password</label>
         <input class="push" type="password" name="password" id="password">
-        <label for="password"></label>
-        <span><a class="btn" href="#">Sign Up</a></span>
+        <button class="btn" type="submit">Sign Up</button>
       </form>
       <p class="milli text-center">Already have an account? <a href="sign-in.html">Sign in!</a></p>
     </section>
   </main>
 
   <footer role="contentinfo" class="island">
-    <div class="grid">
-      <div class="unit xs-1 s-1 m-1-5 l-1-5 milli">
-        <ul>
-          <li class="bold"><a href="#">Products</a></li>
-          <ul class="micro">
-            <li><a href="#">Why Chatterbot?</a></li>
-            <li><a href="#">Analytics</a></li>
-          </ul>
+    <div class="grid text-center">
+      <ul class="unit xs-1 s-1 m-1-5 l-1-5 milli list-group">
+        <li class="bold"><a href="tour.html">Features</a></li>
+        <ul class="micro list-group push-0">
+          <li><a href="#">Templates</a></li>
+          <li><a href="#">Customization</a></li>
         </ul>
-      </div>
-      <div class="unit xs-1 s-1 m-1-5 l-1-5 milli">
-        <ul>
-          <li class="bold"><a href="#">Pricing</a></li>
-          <ul class="micro">
-            <li><a href="#">Packages</a></li>
-            <li><a href="#">Features</a></li>
-            <li><a href="#">FAQ</a></li>
-          </ul>
+      </ul>
+      <ul class="unit xs-1 s-1 m-1-5 l-1-5 milli list-group">
+        <li class="bold"><a href="#">Pricing</a></li>
+        <ul class="micro list-group push-0">
+          <li><a href="#">Packages</a></li>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">FAQ</a></li>
         </ul>
-      </div>
-      <div class="unit xs-1 s-1 m-1-5 l-1-5 milli">
-        <ul>
-          <li class="bold"><a href="tour.html">Features</a></li>
-          <ul class="micro">
-            <li><a href="#">Templates</a></li>
-            <li><a href="#">Customization</a></li>
-          </ul>
+      </ul>
+      <ul class="unit xs-1 s-1 m-1-5 l-1-5 milli list-group">
+        <li class="bold"><a href="#">Products</a></li>
+        <ul class="micro list-group push-0">
+          <li><a href="#">Why Chatterbot?</a></li>
+          <li><a href="#">Analytics</a></li>
         </ul>
-      </div>
-      <div class="unit xs-1 s-1 m-1-5 l-1-5 milli">
-        <ul>
-          <li class="bold"><a href="#">Help</a></li>
-          <ul class="micro">
-            <li><a href="#">Support</a></li>
-            <li><a href="#">Training</a></li>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Live Chat</a></li>
-          </ul>
+      </ul>
+      <ul class="unit xs-1 s-1 m-1-5 l-1-5 milli list-group">
+        <li class="bold"><a href="#">Help</a></li>
+        <ul class="micro list-group push-0">
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Training</a></li>
+          <li><a href="#">Contact Us</a></li>
+          <li><a href="#">Live Chat</a></li>
         </ul>
-      </div>
-      <div class="unit xs-1 s-1 m-1-5 l-1-5 milli">
-        <ul>
-          <li class="bold"><a href="#">Legal</a></li>
-          <ul class="micro">
-            <li><a href="#">Terms and Conditions</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-          </ul>
+      </ul>
+      <ul class="unit xs-1 s-1 m-1-5 l-1-5 milli list-group">
+        <li class="bold"><a href="#">Legal</a></li>
+        <ul class="micro list-group push-0">
+          <li><a href="#">Terms and Conditions</a></li>
+          <li><a href="#">Privacy Policy</a></li>
         </ul>
-      </div>
+      </ul>
     </div>
-    <div  class="text-center">
-      <small>Copyright ©2020 Chatterbot</small>
+    <div class="text-center">
+      <small class="micro">Copyright ©2020 Chatterbot</small>
     </div>
   </footer>
