--- a/tour.html
+++ b/tour.html
@@ -59,7 +59,7 @@
   </main>
 
   <footer role="contentinfo" class="island">
-    <div class="grid">
+    <div class="grid text-center">
       <ul class="unit xs-1 s-1 m-1-5 l-1-5 milli list-group">
         <li class="bold"><a href="tour.html">Features</a></li>
         <ul class="micro list-group push-0">
@@ -99,7 +99,7 @@
         </ul>
       </ul>
     </div>
-    <div  class="text-center">
-      <small>Copyright ©2020 Chatterbot</small>
+    <div class="text-center">
+      <small class="micro">Copyright ©2020 Chatterbot</small>
     </div>
   </footer>
