Add some basic accessibility

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <a href="index.html"><h1 class="gutter text-center nina bold">chatterbot</h1></a>
       </div>
       <div class="unit xs-1 s-1 m-3-4 l-3-4">
-        <nav role="navigation" class="gutter text-right">
-          <ul class="nav list-group">
+        <nav role="navigation" id="nav" tabindex="0" class="gutter text-right">
+          <ul class="nav list-group list-group-inline">
             <li><a href="tour.html">Features</a></li>
             <li><a href="pricing.html">Pricing</a></li>
             <li><a href="#">Products</a></li>
@@ -31,8 +31,8 @@
     </div>
   </header>
 
-  <main>
-    <section class="island push-1-2">
+  <main role="main" id="main" tabindex="0">
+    <section id="support" tabindex="0" class="island push-1-2">
       <div class="grid grid-middle">
         <div class="unit xs-1 s-1 m-1-2 l-1-2">
           <h2 class="text-center">One-on-one support to create your own chatbot.</h2>
@@ -47,12 +47,12 @@
       </div>
     </section>
 
-    <section class="builder island">
+    <section id="builder" tabindex="0" class="builder island">
       <h2 class="text-center not-bold">Our Chatbot Builder</h2>
       <img class="img-flex gutter push-1-2" src="images/placeholder-3by2.svg" alt="">
     </section>
 
-    <section class="island">
+    <section id="client-needs" tabindex="0" class="island">
       <h3 class="text-center">Find out what your client needs with Chatterbot</h3>
       <p class="text-center">Create your own chatbot hassle-free!</p>
       <form class="push text-center" action="index.html" method="post">
@@ -64,7 +64,7 @@
       </div>
     </section>
 
-    <section class="testimonial island">
+    <section id="testimonial" tabindex="0" class="testimonial island">
       <div class="grid grid-middle">
         <div class="unit xs-1 s-1 m-1-2 l-1-2 island">
           <img class="img-flex" src="images/placeholder-1by1.svg" alt="">
