--- a/pricing.html
+++ b/pricing.html
@@ -18,8 +18,8 @@
         <a href="index.html"><h1 class="gutter text-center nina bold">chatterbot</h1></a>
       </div>
       <div class="unit xs-1 s-1 m-3-4 l-3-4">
-        <nav class="gutter text-right">
-          <ul class="nav list-group">
+        <nav role="navigation" id="nav" tabindex="0" class="gutter text-right">
+          <ul class="nav list-group list-group-inline">
             <li><a href="tour.html">Features</a></li>
             <li><a class="current" href="pricing.html">Pricing</a></li>
             <li><a href="#">Products</a></li>
