--- a/tour.html
+++ b/tour.html
@@ -18,8 +18,8 @@
         <a href="index.html"><h1 class="gutter text-center nina bold">chatterbot</h1></a>
       </div>
       <div class="unit xs-1 s-1 m-3-4 l-3-4">
-        <nav class="gutter text-right">
-          <ul class="nav list-group">
+        <nav role="navigation" id="nav" tabindex="0" class="gutter text-right">
+          <ul class="nav list-group list-group-inline">
             <li><a class="current" href="tour.html">Features</a></li>
             <li><a href="pricing.html">Pricing</a></li>
             <li><a href="#">Products</a></li>
@@ -31,8 +31,8 @@
     </div>
   </header>
 
-  <main>
-    <section class="island">
+  <main role="main" id="main" tabindex="0">
+    <section id="templates" tabindex="0" class="island">
       <h2 class="text-center pad-t gutter-2">Choose from one of our existing templates to create your own chatbot.</h2>
       <div class="grid">
         <div class="unit xs-1 s-1 m-1-2 l-1-2 island">
@@ -45,7 +45,7 @@
         </div>
       </div>
     </section>
-    <section class="island">
+    <section id="customization" tabindex="0" class="island">
       <div class="grid grid-middle">
         <div class="unit xs-1 s-1 m-1-2 l-1-2 island">
           <img class="img-flex" src="images/placeholder-1by1.svg" alt="">
