--- a/sign-up.html
+++ b/sign-up.html
@@ -18,8 +18,8 @@
         <a href="index.html"><h1 class="gutter text-center nina bold">chatterbot</h1></a>
       </div>
       <div class="unit xs-1 s-1 m-3-4 l-3-4">
-        <nav class="gutter text-right">
-          <ul class="nav list-group">
+        <nav role="navigation" id="nav" tabindex="0" class="gutter text-right">
+          <ul class="nav list-group list-group-inline">
             <li><a href="tour.html">Features</a></li>
             <li><a href="pricing.html">Pricing</a></li>
             <li><a href="#">Products</a></li>
@@ -34,11 +34,13 @@
   <main>
     <section class="island pad-b-2">
       <h2 class="text-upper text-center pad-t-2">Create A New Account</h2>
-      <form class="push" action="index.html" method="POST">
+      <form class="push" action="https://formspree.io/mato0039@algonquinlive.com" method="POST">
         <label class="micro" for="email">Enter your email</label>
-        <input class="push" type="email" name="email" id="email">
+        <input class="push" type="email" name="email" id="email" required>
         <label class="micro" for="password">Create your password</label>
-        <input class="push" type="password" name="password" id="password">
+        <input class="push" type="password" name="password" id="password" required>
+        <label class="micro" for="confirmation">Confirm password</label>
+        <input class="push" type="password" name="confirmation" id="confirmation" required>
         <button class="btn" type="submit">Sign Up</button>
       </form>
       <p class="milli text-center">Already have an account? <a href="sign-in.html">Sign in!</a></p>
