--- a/pricing.html
+++ b/pricing.html
@@ -20,10 +20,9 @@
       <div class="unit xs-1 s-1 m-3-4 l-3-4">
         <nav role="navigation" id="nav" tabindex="0" class="gutter text-right">
           <ul class="nav list-group list-group-inline">
+            <li><a href="index.html">Home</a></li>
             <li><a href="tour.html">Features</a></li>
             <li><a class="current" href="pricing.html">Pricing</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">Help</a></li>
             <li><a href="sign-in.html">Sign In</a></li>
           </ul>
         </nav>
