--- a/sign-in.html
+++ b/sign-in.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-  <header role="banner" class="pad-t-1-2">
+  <header role="banner" class="pad-t-1-2 wrapper">
     <div class="grid grid-middle">
       <div class="unit xs-1 s-1 m-1-4 l-1-4">
         <a href="index.html"><h1 class="gutter text-center nina bold">chatterbot</h1></a>
@@ -20,10 +20,9 @@
       <div class="unit xs-1 s-1 m-3-4 l-3-4">
         <nav role="navigation" id="nav" tabindex="0" class="gutter text-right">
           <ul class="nav list-group list-group-inline">
+            <li><a href="index.html">Home</a></li>
             <li><a href="tour.html">Features</a></li>
             <li><a href="pricing.html">Pricing</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">Help</a></li>
             <li><a class="current" href="sign-in.html">Sign In</a></li>
           </ul>
         </nav>
@@ -31,20 +30,20 @@
     </div>
   </header>
 
-  <main>
+  <main class="wrapper">
     <section class="island pad-b-2">
       <h2 class="text-upper text-center pad-t-2">Sign in to your account</h2>
-      <form class="push" action="https://formspree.io/mato0039@algonquinlive.com" method="POST">
-        <label class="micro" for="email">Username</label>
-        <input class="push" type="email" name="email" id="email">
-        <label class="micro" for="google">Password</label>
-        <input class="push" type="email" name="google" id="google">
+      <form class="push center-content" action="https://formspree.io/mato0039@algonquinlive.com" method="POST">
+        <label class="micro" for="email">Email</label>
+        <input class="push" type="email" name="email" id="email" required>
+        <label class="micro" for="password">Password</label>
+        <input class="push" type="password" name="password" id="password" required>
       </form>
       <p class="milli text-center">Don't have an account? <a class="text-decoration" href="sign-up.html">Sign up!</a></p>
     </section>
   </main>
 
-  <footer role="contentinfo" class="island">
+  <footer role="contentinfo" class="island wrapper">
     <div class="grid text-center">
       <ul class="unit xs-1 s-1 m-1-5 l-1-5 milli list-group">
         <li class="bold"><a href="tour.html">Features</a></li>
