--- a/sign-up.html
+++ b/sign-up.html
@@ -20,10 +20,9 @@
       <div class="unit xs-1 s-1 m-3-4 l-3-4">
         <nav role="navigation" id="nav" tabindex="0" class="gutter text-right">
           <ul class="nav list-group list-group-inline">
+            <li><a href="index.html">Home</a></li>
             <li><a href="tour.html">Features</a></li>
             <li><a href="pricing.html">Pricing</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">Help</a></li>
             <li><a class="current" href="sign-in.html">Sign In</a></li>
           </ul>
         </nav>
@@ -34,7 +33,7 @@
   <main>
     <section class="island pad-b-2">
       <h2 class="text-upper text-center pad-t-2">Create A New Account</h2>
-      <form class="push" action="https://formspree.io/mato0039@algonquinlive.com" method="POST">
+      <form class="push center-content" action="https://formspree.io/mato0039@algonquinlive.com" method="POST">
         <label class="micro" for="email">Enter your email</label>
         <input class="push" type="email" name="email" id="email" required>
         <label class="micro" for="password">Create your password</label>
