Change the background

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="unit xs-1 s-1 m-1-2 l-1-2">
           <h2 class="not-bold">One-on-one support to create your own chatbot.</h2>
           <p class="">It's fast and free!</p>
-          <div class="">
+          <div>
             <span><a class="btn" href="sign-up.html">Sign Up</a></span>
           </div>
         </div>
@@ -59,7 +59,7 @@
         <p class="text-center">Create your own chatbot hassle-free!</p>
         <form class="push center-content" action="index.html" method="post">
           <label for="email"></label>
-          <input type="email" name="" value="">
+          <input type="email" name="email">
         </form>
         <div class="text-center">
           <span><a class="btn" href="sign-up.html">Sign Up</a></span>
