--- a/pricing.html
+++ b/pricing.html
@@ -8,7 +8,7 @@
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Bellota+Text&family=Spartan:wght@400;700;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@100;300;400;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -30,48 +30,103 @@
     </div>
   </header>
 
+  <main role="banner" id="main" tabindex="0">
+    <section id="packages" class="island push-1-2">
+      <h2 class="not-bold text-center">Packages</h2>
+      <div class="grid center-content">
+        <div class="unit xs-1 s-1 m-1-3 l-1-3 card push push-r">
+          <h3 class="card-title island-1-2 push-0 bold text-center">Starter</h3>
+          <div class="island">
+            <p class="zetta text-center push-1-2">$59<span class="milli">/mo</span></p>
+            <ul class="push-0 list-group gutter milli">
+              <li>• 1 chatbot</li>
+              <li>• 1 week one-on-one support</li>
+              <li>• basic reporting</li>
+              <li>• data security</li>
+            </ul>
+          </div>
+        </div>
+        <div class="unit xs-1 s-1 m-1-3 l-1-3 card push push-r">
+          <h3 class="card-title island-1-2 push-0 bold text-center">Team</h3>
+          <div class="island">
+            <p class="zetta text-center push-1-2">$139<span class="milli">/mo</span></p>
+            <ul class="push-0 list-group gutter milli">
+              <li>• 6 chatbots</li>
+              <li>• 3 months one-on-one support</li>
+              <li>• advanced reporting</li>
+              <li>• data security</li>
+            </ul>
+          </div>
+        </div>
+        <div class="unit xs-1 s-1 m-1-3 l-1-3 card push">
+          <h3 class="card-title island-1-2 push-0 bold text-center">Business</h3>
+          <div class="island">
+            <p class="zetta text-center push-1-2">$299<span class="milli">/mo</span></p>
+            <ul class="push-0 list-group gutter milli">
+              <li>• unlimited chatbots</li>
+              <li>• unlimited one-on-one support</li>
+              <li>• premium reporting</li>
+              <li>• data security</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+
+    </section>
+
+  </main>
+
   <footer role="contentinfo" class="island">
-    <div class="grid text-center">
-      <ul class="unit xs-1 s-1 m-1-5 l-1-5 milli list-group">
-        <li class="bold"><a href="tour.html">Features</a></li>
-        <ul class="micro list-group push-0">
-          <li><a href="#">Templates</a></li>
-          <li><a href="#">Customization</a></li>
+    <div class="wrapper">
+      <nav class="grid text-center">
+        <ul class="unit xs-1 s-1 m-1-4 l-1-4 list-group push">
+          <li class="bold"><a href="tour.html">Features</a>
+            <ul class="micro list-group push-0 not-bold">
+              <li><a href="tour.html#templates">Templates</a></li>
+              <li><a href="tour.html#customization">Customization</a></li>
+            </ul>
+          </li>
         </ul>
-      </ul>
-      <ul class="unit xs-1 s-1 m-1-5 l-1-5 milli list-group">
-        <li class="bold"><a href="#">Pricing</a></li>
-        <ul class="micro list-group push-0">
-          <li><a href="#">Packages</a></li>
-          <li><a href="#">Features</a></li>
-          <li><a href="#">FAQ</a></li>
+        <ul class="unit xs-1 s-1 m-1-4 l-1-4 list-group push">
+          <li class="bold"><a href="pricing.html">Pricing</a>
+            <ul class="micro list-group push-0 not-bold">
+              <li><a href="pricing.html#packages">Packages</a></li>
+              <li><a href="pricing.html#faq">FAQ</a></li>
+            </ul>
+          </li>
         </ul>
-      </ul>
-      <ul class="unit xs-1 s-1 m-1-5 l-1-5 milli list-group">
-        <li class="bold"><a href="#">Products</a></li>
-        <ul class="micro list-group push-0">
-          <li><a href="#">Why Chatterbot?</a></li>
-          <li><a href="#">Analytics</a></li>
+        <ul class="unit xs-1 s-1 m-1-4 l-1-4 list-group push">
+          <li class="bold"><a href="#">Products</a>
+            <ul class="micro list-group push-0 not-bold">
+              <li><a href="#">Why Chatterbot?</a></li>
+              <li><a href="#">Analytics</a></li>
+            </ul>
+          </li>
         </ul>
-      </ul>
-      <ul class="unit xs-1 s-1 m-1-5 l-1-5 milli list-group">
-        <li class="bold"><a href="#">Help</a></li>
-        <ul class="micro list-group push-0">
-          <li><a href="#">Support</a></li>
-          <li><a href="#">Training</a></li>
-          <li><a href="#">Contact Us</a></li>
-          <li><a href="#">Live Chat</a></li>
+        <ul class="unit xs-1 s-1 m-1-4 l-1-4 list-group push">
+          <li class="bold"><a href="#">Help</a>
+            <ul class="micro list-group push-0 not-bold">
+              <li><a href="#">Support</a></li>
+              <li><a href="#">Training</a></li>
+              <li><a href="#">Contact Us</a></li>
+              <li><a href="#">Live Chat</a></li>
+            </ul>
+          </li>
         </ul>
-      </ul>
-      <ul class="unit xs-1 s-1 m-1-5 l-1-5 milli list-group">
-        <li class="bold"><a href="#">Legal</a></li>
-        <ul class="micro list-group push-0">
-          <li><a href="#">Terms and Conditions</a></li>
-          <li><a href="#">Privacy Policy</a></li>
-        </ul>
-      </ul>
-    </div>
-    <div class="text-center">
-      <small class="micro">Copyright ©2020 Chatterbot</small>
+      </nav>
+      <div class="grid grid-middle pad-t-1-2 push">
+        <div class="unit xs-1 s-1 m-3-4 l-3-4 push-1-2">
+          <small class="micro">Copyright ©2020 Chatterbot</small>
+        </div>
+        <div class="unit xs-1 s-1 m-1-4 l-1-4 push-1-2 social">
+          <img class="img-flex" src="images/facebook.svg" alt="">
+          <img class="img-flex" src="images/instagram.svg" alt="">
+          <img class="img-flex" src="images/twitter.svg" alt="">
+        </div>
+
+      </div>
     </div>
   </footer>
