Fix the margins

--- a/pricing.html
+++ b/pricing.html
@@ -13,7 +13,7 @@
 <body>
 
   <header role="banner" class="pad-t-1-2">
-    <div class="grid grid-middle">
+    <div class="grid grid-middle wrapper">
       <div class="unit xs-1 s-1 m-1-4 l-1-4">
         <a href="index.html"><h1 class="gutter text-center nina bold">chatterbot</h1></a>
       </div>
@@ -38,7 +38,7 @@
           <h3 class="card-title island-1-2 push-0 bold text-center">Starter</h3>
           <div class="island">
             <p class="zetta text-center push-1-2">$59<span class="milli">/mo</span></p>
-            <ul class="push-0 list-group gutter milli">
+            <ul class="push-0 list-group gutter-1-2 milli">
               <li>• 1 chatbot</li>
               <li>• 1 week one-on-one support</li>
               <li>• basic reporting</li>
@@ -50,7 +50,7 @@
           <h3 class="card-title island-1-2 push-0 bold text-center">Team</h3>
           <div class="island">
             <p class="zetta text-center push-1-2">$139<span class="milli">/mo</span></p>
-            <ul class="push-0 list-group gutter milli">
+            <ul class="push-0 list-group gutter-1-2 milli">
               <li>• 6 chatbots</li>
               <li>• 3 months one-on-one support</li>
               <li>• advanced reporting</li>
@@ -62,7 +62,7 @@
           <h3 class="card-title island-1-2 push-0 bold text-center">Business</h3>
           <div class="island">
             <p class="zetta text-center push-1-2">$299<span class="milli">/mo</span></p>
-            <ul class="push-0 list-group gutter milli">
+            <ul class="push-0 list-group gutter-1-2 milli">
               <li>• unlimited chatbots</li>
               <li>• unlimited one-on-one support</li>
               <li>• premium reporting</li>
