--- a/sign-in.html
+++ b/sign-in.html
@@ -12,8 +12,8 @@
 </head>
 <body>
 
-  <header role="banner" class="pad-t-1-2 wrapper">
-    <div class="grid grid-middle">
+  <header role="banner" class="pad-t-1-2">
+    <div class="grid grid-middle wrapper">
       <div class="unit xs-1 s-1 m-1-4 l-1-4">
         <a href="index.html"><h1 class="gutter text-center nina bold">chatterbot</h1></a>
       </div>
@@ -30,19 +30,17 @@
     </div>
   </header>
 
-  <main class="wrapper sign-in">
-    <div class="">
-      <section class="island pad-b-2">
-        <h2 class="text-upper text-center pad-t-2">Sign in to your account</h2>
-        <form class="push center-content" action="https://formspree.io/mato0039@algonquinlive.com" method="POST">
-          <label class="micro" for="email">Email</label>
-          <input class="push" type="email" name="email" id="email" required>
-          <label class="micro" for="password">Password</label>
-          <input class="push" type="password" name="password" id="password" required>
-        </form>
-        <p class="milli text-center">Don't have an account? <a class="text-decoration" href="sign-up.html">Sign up!</a></p>
-      </section>
-    </div>
+  <main>
+    <section class="island pad-b-2">
+      <h2 class="text-upper text-center pad-t-2">Sign in to your account</h2>
+      <form class="push center-content" action="https://formspree.io/mato0039@algonquinlive.com" method="POST">
+        <label class="micro" for="email">Email</label>
+        <input class="push" type="email" name="email" id="email" required>
+        <label class="micro" for="password">Password</label>
+        <input class="push" type="password" name="password" id="password" required>
+      </form>
+      <p class="milli text-center">Don't have an account? <a class="text-decoration" href="sign-up.html">Sign up!</a></p>
+    </section>
   </main>
 
   <footer role="contentinfo" class="island">
