--- a/sign-up.html
+++ b/sign-up.html
@@ -13,7 +13,7 @@
 <body>
 
   <header role="banner" class="pad-t-1-2">
-    <div class="grid grid-middle">
+    <div class="grid grid-middle wrapper">
       <div class="unit xs-1 s-1 m-1-4 l-1-4">
         <a href="index.html"><h1 class="gutter text-center nina bold">chatterbot</h1></a>
       </div>
