--- a/tour.html
+++ b/tour.html
@@ -13,7 +13,7 @@
 <body>
 
   <header role="banner" class="pad-t-1-2">
-    <div class="grid grid-middle">
+    <div class="grid grid-middle wrapper">
       <div class="unit xs-1 s-1 m-1-4 l-1-4">
         <a href="index.html"><h1 class="gutter text-center nina bold">chatterbot</h1></a>
       </div>
@@ -31,7 +31,7 @@
   </header>
 
   <main role="main" id="main" tabindex="0">
-    <section id="templates" tabindex="0" class="island">
+    <section id="templates" tabindex="0" class="island wrapper">
       <h2 class="text-center pad-t gutter-2">Choose from one of our existing templates to create your own chatbot.</h2>
       <div class="grid">
         <div class="unit xs-1 s-1 m-1-2 l-1-2 island">
@@ -44,7 +44,7 @@
         </div>
       </div>
     </section>
-    <section id="customization" tabindex="0" class="island">
+    <section id="customization" tabindex="0" class="island wrapper">
       <div class="grid grid-middle">
         <div class="unit xs-1 s-1 m-1-2 l-1-2 island">
           <img class="img-flex island-2" src="images/support.svg" alt="">
